Better alignment about us - correction output

--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -569,7 +569,7 @@ ul.row {
 /* Section ABOUT US
           =============================*/
 
-.section-about-us [class*='col-'] {
+.section-about-us .col- {
     align-self: center;
 }
 
